appId: com.cristina.trofimov143.frontend
---
- launchApp

- waitForAnimationToEnd:
    timeout: 1100
- tapOn:
    point: 93%, 6%
- tapOn:
    point: 93%, 7%
- tapOn:
    point: 93%, 12%
- tapOn:
    point: 93%, 11%
- tapOn:
    point: 93%, 10%

- waitForAnimationToEnd:
    timeout: 900
- tapOn: "naolal30@gmail.com"
- tapOn: "Map"
- waitForAnimationToEnd:
    timeout: 500
- tapOn: "SOEN 345"
- swipe:
    start: 50%, 50%
    end: 50%, 90%
- swipe:
    start: 50%, 50%
    end: 50%, 90%
- swipe:
    start: 50%, 50%
    end: 10%, 50%
